--- a/Gallery.html
+++ b/Gallery.html
@@ -118,7 +118,7 @@
 			let type = params.get("type");
 			if(!type)
 				type = "paintings";
-			$.get(`api/${type}.php`, function (data) {
+			$.get(`${apiBaseURL}/${type}.php`, function (data) {
 				console.log(data);
 				var productsList = $("#portfolio-wrapper");
 				data.forEach(function (product) {
