--- a/Gallery.html
+++ b/Gallery.html
@@ -46,10 +46,6 @@
 					<div class="col-lg-12">
 						<h5><b>Filter by:</b></h5>
 						<ul id="portfolio-flters">
-
-							<li data-filter=".filter-app, .filter-card, .filter-logo, .filter-web"
-								class="filter-active">All</li>
-							<li data-filter=".filter-app">Theme</li>
 							<li data-filter=".filter-card">Artist</li>
 							<li data-filter=".filter-web">Medium</li>
 						</ul>
@@ -160,6 +156,35 @@
 				});
 			});
 		}
+		
+		$("#searchText").keyup(function(event) {
+			if (event.which == 13) {
+				//pressed enter after entering search query
+				let params = (new URL(document.location)).searchParams;
+				let type = params.get("type");
+				let searchQuery = $("#searchText").val().toLowerCase();
+				switch (type) {
+					case "paintings":
+						//show all 
+						$(".portfolio-item").show();
+
+						//filter
+						$(".portfolio-item").forEach(function(product){
+							let firstLine = product.getElementsByTagName("h4")[0].innerHTML;
+							let secondLine = product.getElementsByClassName("product-second-line")[0].innerHTML;
+							let thirdLine = product.getElementsByClassName("product-third-line")[0].innerHTML;
+
+							if (!firstLine.toLowerCase().contains(searchQuery) &&
+								!secondLine.toLowerCase().contains(searchQuery) &&
+								!thirdLine.toLowerCase().contains(searchQuery)) {
+								$(product).hide("slow");
+							}
+						});
+					break;
+				}
+			}
+		});
+
 	</script>
 </body>
 
